# OOP2

./: CMakeLists.txt  Calculations.cpp  FinalScore.cpp  FullGenerate.cpp  Functions.cpp  GenerateFIles.cpp  GenerateInput.cpp  GenerateScores.cpp  Kietiakai.txt  ManualInput.cpp  Output.cpp  README.md  ReadFile.cpp  Studentai1000.txt  Studentai10000.txt  Studentai100000.txt  Studentai_1000.txt  Studentai_10000.txt  Vargsiukai.txt  functions.h  main.cpp  manolib.h  studentai10000.txt  v0.1.cpp  v0.1m.cpp
Dokumentacija/: Doxyfile
html/: annotated.html  annotated_dup.js  class_stud-members.html  class_stud__coll__graph.dot  class_stud_a07f94d74e9e563756d78605ac8093a9a_icgraph.dot  class_stud_a4d3c5d9554efdc1f68d66958375e71e0_icgraph.dot  class_stud_a97585839898d45dc9fc815d5b36e2b69_icgraph.dot  class_stud_aa6575230afb3ea980563b2cb039bd4c9_icgraph.dot  class_stud_afd1e9be92f8d351aa99b4c09a332ea3a_cgraph.dot  class_zmogus-members.html  class_zmogus__inherit__graph.dot  class_zmogus_a11ee9ac120fbb7d6a4e1f4da3a602b63_icgraph.dot  class_zmogus_aa7a8ba4d3c4778f9b35d59eef3e72574_icgraph.dot  class_zmogus_aaea44664c236e2fadf022f3821862499_icgraph.dot  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions.html  functions_8h_a0d5828f70790f70e2a562f3faa1cd0e0_icgraph.dot  functions_8h_a9a0110ef3a6607021645e91e87b150ce_icgraph.dot  functions_8h_a9a8228525c154b5f1eceb473572afe08_cgraph.dot  functions_8h_a9bf76230fb2862461fb6032819fdb096_icgraph.dot  functions_8h_source.html  globals_defs.html  (+23 more)
(+304 files in other folders)
